--- a/ProjetoTeste/Saved/Config/Linux/EditorPerProjectUserSettings.ini
+++ b/ProjetoTeste/Saved/Config/Linux/EditorPerProjectUserSettings.ini
@@ -40,7 +40,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=489,Y=281)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -68,12 +68,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=LinuxNoEditor@pop-os
 LastExecutedLaunchName=pop-os
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=489,Y=281)
 
 [EditorStartup]
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
@@ -81,6 +82,7 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Telas/Menu/Menu_principal.Menu_principal
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -151,7 +153,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Imagens
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -425,11 +427,15 @@ TextBlock.Render Transform=True
 TextBlock.Clipping=True
 TextBlock.Navigation=True
 TextBlock.Localization=True
+PropertyWrapper.Variable=True
+PropertyWrapper.Events=True
+SideScrollerCharacter_C.Default=True
+SideScrollerCharacter_C.Tick=True
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=27.000
 WindowSize=X=1910.000 Y=1043.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1199,8 +1205,10 @@ Widget="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
 Visual="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Menu_arquivos/Menu_principal
-MRUItem1=/Game/SideScrollerBP/Blueprints/SideScrollerGameMode
+MRUItem0=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem1=/Game/Telas/Menu/Menu_principal
+MRUItem2=/Game/Menu_arquivos/Menu_principal
+MRUItem3=/Game/SideScrollerBP/Blueprints/SideScrollerGameMode
 
 [AssetEditorToolkitTabLocation]
 /Game/SideScrollerBP/Blueprints/SideScrollerGameMode.SideScrollerGameMode=1
@@ -1312,4 +1320,18 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
